# file-validator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  plug.py  process-report.py  pyproject.toml  report.py  requirements.txt  todo.txt  validator.py  xmlreport.py
.github/workflows/: ci.yml
config/: Archives.json  FLAC.json  Videos.json  videos.json
config-example/: Archives.json  FLAC.json  Videos.json
filevalidator/: __init__.py  plug.py  processreport.py  report.py  validator.py
filevalidator/plugins/: __init__.py  archives.py  cue.py  flac.py  html.py  images.py  ini.py  iso.py  json.py  m3u.py  nfo.py  orc.py  parquet.py  pdf.py  python.py  raw_images.py  sfv.py  sqlite.py  srt.py  toml.py  txt.py  videos.py  wave.py  xml.py  yaml.py  zip.py
plugins/: Archives.py  FLAC.py  Images.py  ImagesConvert.py  ImagesCovert.py  PDF.py  Python.py  SRT.py  TXT.py  Videos.py  __init__.py  archives.py  flac.py  html.py  images.py  ini.py  json.py  pdf.py  python.py  requirements.txt  sfv.py  sqlite.py  srt.py  txt.py  videos.py  wave.py  xml.py  zip.py
reports/: report.xsl
test-files/archives/: bad.LICENSE-rc.broken.rar  bad.LICENSE.broken.rar  bad.執照-rc.broken.rar  bad.執照.broken.rar  bad.壞的.rar  good.LICENSE-rc.rar  good.LICENSE.rar  good.執照-rc.rar  good.執照.rar
test-files/iso/: bad.trunc.iso  good.iso
test-files/orc/: bad.trunc.orc  good.orc
test-files/parquet/: bad.trunc.parquet
test-files/srt/: bad.1.srt  bad.2.srt  bad.trunc.srt  good.srt
test-files/toml/: bad.trunc.toml
test-files/yaml/: bad.trunc.yaml  good.yaml
tests/: test_plugins.py
